--- a/seat.css
+++ b/seat.css
@@ -92,6 +92,17 @@
   height: 60px;
 }
 
+.seat-middle-text {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: "Inter";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 60px;
+  color: black;
+}
+
 #flip {
   transform: scaleX(-1);
 }
