--- a/seat.css
+++ b/seat.css
@@ -93,9 +93,11 @@
 }
 
 .seat-middle-text {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: "Inter";
   font-weight: 700;
   font-size: 24px;
