--- a/seat.css
+++ b/seat.css
@@ -101,7 +101,7 @@
   font-weight: 700;
   font-size: 44px;
   border-radius: 10px;
-  /* border: 3px solid black; */ /* Remove this line */
+  border: 3px solid black; */ /* Remove this line */
   box-sizing: border-box;
 }
 
