--- a/ticket2.css
+++ b/ticket2.css
@@ -3,14 +3,14 @@
 
 .check-elem1 {
   width: 100%;
-  height: 50px;
+  height: 45px;
   border-bottom: 1px solid black;
   position: relative;
   top: 0;
   font-family: "Inter";
   font-weight: 700;
   line-height: 50px;
-  font-size: 24px;
+  font-size: 22px;
   vertical-align: center;
   letter-spacing: 2px;
   box-sizing: border-box;
@@ -19,14 +19,14 @@
 
 .check-elem2 {
   width: 100%;
-  height: 90px;
+  height: 80px;
   border-bottom: 1px solid black;
   position: relative;
   top: 0;
   font-family: "Inter";
   font-weight: 700;
-  line-height: 40px;
-  font-size: 24px;
+  line-height: 50px;
+  font-size: 22px;
   vertical-align: center;
   letter-spacing: 2px;
   box-sizing: border-box;
@@ -47,6 +47,40 @@
   box-sizing: border-box;
 }
 
+
+
+.check-elem4 {
+  width: 100%;
+  height: 230px;
+  border-bottom: 1px solid black;
+  position: relative;
+  top: 0;
+  font-family: "Inter";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 40px;
+  vertical-align: center;
+  letter-spacing: 2px;
+  box-sizing: border-box;
+}
+
+
+.check-elem5 {
+  width: 100%;
+  height: 80px;
+  border-bottom: 1px solid black;
+  position: relative;
+  top: 0;
+  font-family: "Inter";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 40px;
+  vertical-align: center;
+  letter-spacing: 2px;
+  box-sizing: border-box;
+}
+
+
 .check-left {
   width: 350px;
   position: absolute;
@@ -61,6 +95,28 @@
   right: 30px;
   position: absolute;
 }
+
+.check-left-temp {
+  width: 350px;
+  position: absolute;
+  left: 30px;
+  text-align: left;
+}
+
+
+.check-right-temp {
+  width: 350px;
+  text-align: right;
+  right: 30px;
+  position: absolute;
+}
+
+.qr-code {
+  width: 120px; /* Adjust the width as needed */
+  margin-top: 10px;
+  height: auto; /* Maintain aspect ratio */
+}
+
 
 .ticket-request {
   width: 100%;
