--- a/ticket3.css
+++ b/ticket3.css
@@ -3,14 +3,14 @@
 
 .check-elem1 {
   width: 100%;
-  height: 50px;
+  height: 45px;
   border-bottom: 1px solid black;
   position: relative;
   top: 0;
   font-family: "Inter";
   font-weight: 700;
   line-height: 50px;
-  font-size: 24px;
+  font-size: 22px;
   vertical-align: center;
   letter-spacing: 2px;
   box-sizing: border-box;
@@ -26,7 +26,7 @@
   font-family: "Inter";
   font-weight: 700;
   line-height: 40px;
-  font-size: 24px;
+  font-size: 22px;
   vertical-align: center;
   letter-spacing: 2px;
   box-sizing: border-box;
@@ -35,6 +35,36 @@
 .check-elem3 {
   width: 100%;
   height: 130px;
+  border-bottom: 1px solid black;
+  position: relative;
+  top: 0;
+  font-family: "Inter";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 40px;
+  vertical-align: center;
+  letter-spacing: 2px;
+  box-sizing: border-box;
+}
+
+.check-elem4 {
+  width: 100%;
+  height: 230px;
+  border-bottom: 1px solid black;
+  position: relative;
+  top: 0;
+  font-family: "Inter";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 40px;
+  vertical-align: center;
+  letter-spacing: 2px;
+  box-sizing: border-box;
+}
+
+.check-elem5 {
+  width: 100%;
+  height: 80px;
   border-bottom: 1px solid black;
   position: relative;
   top: 0;
@@ -60,6 +90,28 @@
   text-align: right;
   right: 30px;
   position: absolute;
+}
+
+.check-left-temp {
+  width: 350px;
+  position: absolute;
+  left: 30px;
+  text-align: left;
+}
+
+
+.check-right-temp {
+  width: 350px;
+  text-align: right;
+  right: 30px;
+  position: absolute;
+}
+
+
+.qr-code {
+  width: 120px; /* Adjust the width as needed */
+  margin-top: 10px;
+  height: auto; /* Maintain aspect ratio */
 }
 
 .ticket-rr {
