--- a/station.css
+++ b/station.css
@@ -81,3 +81,19 @@
   border-bottom: 1px solid black;
   padding-left: 30px;
 }
+
+.station-header{
+  width: 100%;
+  height: 50px;
+  font-family: "Inter";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 50px;
+  text-align: left;
+  vertical-align: center;
+  background-color: #FFFFFF;
+  box-sizing: border-box;
+  letter-spacing: 2px;
+  border-bottom: 3px solid black;
+  padding-left: 30px;
+}
