--- a/check.css
+++ b/check.css
@@ -17,6 +17,21 @@
   z-index: 91;
 }
 
+.check-instr {
+  width: 100%;
+  height: 50px;
+
+  font-family: "Inter";
+  font-weight: 700;
+  line-height: 50px;
+  font-size: 24px;
+  vertical-align: center;
+  letter-spacing: 2px;
+  box-sizing: border-box;
+  text-align: center;
+  z-index: 91;
+}
+
 .check-elem2 {
   width: 100%;
   height: 90px;
