--- a/tickets.css
+++ b/tickets.css
@@ -54,6 +54,15 @@
   text-align: left;
 }
 
+.ticket-timer {
+  width: 350px;
+  text-align: right;
+  font-size: 24px;
+  right: 20px;
+  top: 10px;
+  position: absolute;
+}
+
 .ticket-right {
   width: 350px;
   text-align: right;
