--- a/check.css
+++ b/check.css
@@ -47,6 +47,23 @@
   box-sizing: border-box;
 }
 
+
+.check-elem5 {
+  width: 100%;
+  height: 80px;
+  border-bottom: 1px solid black;
+  position: relative;
+  top: 0;
+  font-family: "Inter";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 40px;
+  vertical-align: center;
+  letter-spacing: 2px;
+  box-sizing: border-box;
+}
+
+
 .check-left {
   width: 350px;
   position: absolute;
@@ -61,6 +78,14 @@
   right: 30px;
   position: absolute;
 }
+
+.check-left-temp {
+  width: 350px;
+  position: absolute;
+  left: 30px;
+  text-align: left;
+}
+
 
 .check-right-temp {
   width: 350px;
