--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@ body {
   height: 40%;
 }
 
-.big-button {
+.big-button-1 {
   width: 250px;
   height: 250px;
   background-color: #D9D9D9;
@@ -58,6 +58,38 @@ body {
   justify-content: center; /* 가로 중앙 정렬 */
   align-items: center;
   gap: 10px;
+}
+
+.big-button-2 {
+  width: 250px;
+  height: 250px;
+  background-color: #D9D9D9;
+  position: relative;
+  border-radius: 25px;
+  border: 5px solid black;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* 가로 중앙 정렬 */
+  align-items: center;
+  gap: 10px;
+}
+
+.big-button-2::after {
+  content: "1"; /* Text content of the badge */
+  position: absolute; /* Position the badge absolutely within .big-button */
+  top: -20px; /* Adjust the distance from the top */
+  right: -20px; /* Adjust the distance from the right */
+  width: 50px; /* Width of the badge */
+  height: 50px; /* Height of the badge */
+  background-color: rgb(237, 59, 19); /* Background color of the badge */
+  color: white; /* Text color of the badge */
+  border-radius: 50%; /* Make the badge circular */
+  display: flex; /* Allow flexbox properties */
+  justify-content: center; /* Center content horizontally */
+  align-items: center; /* Center content vertically */
+  font-size: 24px; /* Font size of the text */
+  font-weight: bold; /* Bold text */
 }
 
 .common-header {
@@ -291,6 +323,69 @@ body {
   border-left: 1px solid black;
   z-index: 11;
 }
+
+
+
+.underbar-container {
+  width: 100%;
+  height: 120px; /* Updated height to accommodate two rows */
+  position: absolute;
+  bottom: 0;
+  background-color: #F1F1F1;
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 24px;
+  text-align: center;
+  vertical-align: center;
+  letter-spacing: 3px;
+  color: #000000;
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+  display: flex;
+  flex-direction: column;
+  z-index: 10;
+}
+
+.underbar-row {
+  width: 100%;
+  height: 50%; /* Half the height of the container */
+  display: flex;
+}
+
+.underbar-left-temp1,
+.underbar-right-temp1,
+.underbar-left-temp2,
+.underbar-right-temp2 {
+  width: 50%;
+  line-height: 60px;
+  box-sizing: border-box;
+}
+
+.underbar-left-temp1 {
+  background-color: #D9D9D9;
+  border-right: 1px solid black;
+  border-bottom : 3px solid black;
+}
+
+.underbar-right-temp1 {
+  background-color: #D9D9D9;
+  border-left: 1px solid black;
+  border-bottom : 3px solid black;
+}
+
+.underbar-left-temp2 {
+  background-color: #D9D9D9;
+  border-right: 1px solid black;
+}
+
+.underbar-right-temp2 {
+  background-color: #545454;
+  border-left: 1px solid black;
+}
+
+
+
+
 
 #normal {
   background-color: #D9D9D9;
