--- a/tickets.css
+++ b/tickets.css
@@ -3,7 +3,7 @@
 
 .ticket-body {
   width: 100%;
-  height: 100%;
+  height: 100%; 
   position: absolute;
   overflow: auto;
   top: 0;
@@ -76,6 +76,28 @@
   position: relative;
   top: 0;
   font-family: "Inter";
+  font-weight: 800;
+  font-size: 28px;
+  padding-left: 20px;
+  line-height: 50px;
+  text-align: left;
+  vertical-align: center;
+  letter-spacing: 2px;
+  box-sizing: border-box;
+  z-index: 91;
+}
+
+
+.common-header {
+  width: 100%;
+  height: 50px;
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+  background-color: #000000;
+  position: relative;
+  top: 0;
+  font-family: "Inter";
+  color : #ffffff;
   font-weight: 800;
   font-size: 28px;
   padding-left: 20px;
