--- a/recentticket.css
+++ b/recentticket.css
@@ -122,3 +122,21 @@
     visibility: hidden;
     z-index:92;
 }
+
+.small-button {
+    width: 250px;
+    height: 100px;
+    font-family: "Inter";
+    font-weight: 800;
+    font-size: 28px;
+    background-color: #D9D9D9;
+    position: relative;
+    border-radius: 25px;
+    border: 5px solid black;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* 가로 중앙 정렬 */
+    align-items: center;
+    gap: 10px;
+  }
