--- a/station.css
+++ b/station.css
@@ -94,7 +94,7 @@
   line-height: 50px;
   text-align: left;
   vertical-align: center;
-  background-color: #FFFFFF;
+  background-color: #F1F1F1;
 
   color : #000000;
 
