--- a/main.css
+++ b/main.css
@@ -136,6 +136,8 @@ body {
   width: 100%;
   height: 50px;
   border-bottom: 3px solid black;
+  background-color: #F1F1F1;
+  color: black;
   position: relative;
   top: 0;
   font-family: "Inter";
