--- a/tickets.css
+++ b/tickets.css
@@ -102,11 +102,11 @@
   height: 50px;
   border-top: 3px solid black;
   border-bottom: 3px solid black;
-  background-color: #000000;
+  background-color: #F1F1F1;
   position: relative;
   top: 0;
   font-family: "Inter";
-  color : #ffffff;
+  color : #000000;
   font-weight: 800;
   font-size: 28px;
   padding-left: 20px;
