--- a/tickets.css
+++ b/tickets.css
@@ -56,9 +56,9 @@
 
 .ticket-timer {
   width: 350px;
-  text-align: right;
+  text-align: left;
   font-size: 24px;
-  right: 20px;
+  left: 20px;
   bottom: 10px;
   position: absolute;
 }
