--- a/main.css
+++ b/main.css
@@ -85,6 +85,25 @@ body {
   height: 40%;
 }
 
+.small-button {
+  width: 250px;
+  height: 100px;
+  text-align: center;
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 20px;
+  background-color: #D9D9D9;
+  position: relative;
+  border-radius: 25px;
+  border: 5px solid black;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* 가로 중앙 정렬 */
+  align-items: center;
+  gap: 10px;
+}
+
 .big-button-1 {
   width: 250px;
   height: 250px;
