--- a/main.css
+++ b/main.css
@@ -17,6 +17,46 @@ body {
   box-sizing: border-box;
 }
 
+.tuto-black {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: black;
+  opacity: 0.3;
+  z-index: 98;
+}
+
+.tuto-text {
+  width: 350px;
+  position: absolute;
+  background-color: black;
+  border: 3px solid white;
+  color: white;
+  padding: 10px;
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 30px;
+  text-align: left;
+  vertical-align: center;
+  box-sizing: border-box;
+}
+
+.tuto-x {
+  width: 30px;
+  position: absolute;
+  right: 30px;
+  top: 30px;
+  color: #cdcdcd;
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 30px;
+  text-align: right;
+  vertical-align: top;
+  box-sizing: border-box;
+}
+
 .main-body {
   width: 100%;
   height: 0px;
@@ -96,6 +136,29 @@ body {
   width: 100%;
   height: 50px;
   border-bottom: 3px solid black;
+  background-color: #F1F1F1;
+  color: black;
+  position: relative;
+  top: 0;
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 28px;
+  padding-left: 20px;
+  line-height: 50px;
+  text-align: left;
+  vertical-align: center;
+  letter-spacing: 2px;
+  box-sizing: border-box;
+  z-index: 91;
+}
+
+.uncommon-header {
+  width: 100%;
+  height: 50px;
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+  background-color: black;
+  color: #F1F1F1;
   position: relative;
   top: 0;
   font-family: "Inter";
