--- a/recentticket.css
+++ b/recentticket.css
@@ -54,15 +54,6 @@
   text-align: left;
 }
 
-.ticket-timer {
-  width: 350px;
-  text-align: left;
-  font-size: 24px;
-  left: 20px;
-  bottom: 10px;
-  position: absolute;
-}
-
 .ticket-right {
   width: 350px;
   text-align: right;
@@ -102,11 +93,11 @@
   height: 50px;
   border-top: 3px solid black;
   border-bottom: 3px solid black;
-  background-color: #F1F1F1;
+  background-color: #000000;
   position: relative;
   top: 0;
   font-family: "Inter";
-  color : #000000;
+  color : #ffffff;
   font-weight: 800;
   font-size: 28px;
   padding-left: 20px;
@@ -117,3 +108,35 @@
   box-sizing: border-box;
   z-index: 91;
 }
+
+.platformmap {
+    width: 240; /* 부모 요소에 맞게 이미지 크기 조정 */
+    height: 240;
+    position: relative; /* 부모 요소에 대해 위치 지정 */
+    padding: 10px 0px 10px 0px;
+  }
+
+.bigmap{
+    width:auto;
+    position: relative;
+    visibility: hidden;
+    z-index:92;
+}
+
+.small-button {
+    width: 250px;
+    height: 100px;
+    font-family: "Inter";
+    font-weight: 800;
+    font-size: 28px;
+    background-color: #D9D9D9;
+    position: relative;
+    border-radius: 25px;
+    border: 5px solid black;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* 가로 중앙 정렬 */
+    align-items: center;
+    gap: 10px;
+  }
