--- a/seat.css
+++ b/seat.css
@@ -55,7 +55,7 @@
             height: 100%;
             overflow: auto;
             position: absolute;
-            top: 0;
+            top: 50px;
             left: 0;
             right: 0;
             bottom: 0;
@@ -102,12 +102,6 @@
   font-weight: 700;
   font-size: 24px;
 }
-
-
-.reservation-progress{
-  color: #77DD77
-}
-
 #flip {
   transform: scaleX(-1);
 }
