--- a/station.css
+++ b/station.css
@@ -94,7 +94,7 @@
   line-height: 50px;
   text-align: left;
   vertical-align: center;
-  background-color: #FFFFFF;
+  background-color: #F1F1F1;
 
   color : #000000;
 
@@ -104,8 +104,19 @@
   padding-left: 30px;
 }
 
+#T1 {
+  top: 100px;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
 
-.reservation-progress{
-  color: #77DD77
+#T2 {
+  bottom: 75px;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+#S {
+  top: 75px;
 }
 
