--- a/check.css
+++ b/check.css
@@ -68,3 +68,8 @@
   right: 30px;
   position: absolute;
 }
+
+.contact-name {
+  font-size: 1.2em; /* Change the font size to your desired value */
+  text-align: center; /* Center align the text */
+}
