--- a/tickets.css
+++ b/tickets.css
@@ -56,10 +56,10 @@
 
 .ticket-timer {
   width: 350px;
-  text-align: right;
+  text-align: left;
   font-size: 24px;
-  right: 20px;
-  top: 10px;
+  left: 20px;
+  bottom: 10px;
   position: absolute;
 }
 
@@ -102,11 +102,11 @@
   height: 50px;
   border-top: 3px solid black;
   border-bottom: 3px solid black;
-  background-color: #000000;
+  background-color: #F1F1F1;
   position: relative;
   top: 0;
   font-family: "Inter";
-  color : #ffffff;
+  color : #000000;
   font-weight: 800;
   font-size: 28px;
   padding-left: 20px;
