--- a/main.css
+++ b/main.css
@@ -22,6 +22,7 @@ body {
   height: 100%;
   position: absolute;
   background-color: black;
+  top: 0;
   opacity: 0.3;
   z-index: 98;
 }
@@ -67,7 +68,7 @@ body {
   flex-direction: column;
   justify-content: center; /* 가로 중앙 정렬 */
   align-items: center;
-  gap: 40px;
+  gap: 25px;
 }
 
 .main-blank {
@@ -86,12 +87,12 @@ body {
 }
 
 .small-button {
-  width: 250px;
+  width: 350px;
   height: 100px;
   text-align: center;
   font-family: "Inter";
   font-weight: 800;
-  font-size: 20px;
+  font-size: 24px;
   background-color: #D9D9D9;
   position: relative;
   border-radius: 25px;
