--- a/ticket2.css
+++ b/ticket2.css
@@ -51,7 +51,7 @@
 
 .check-elem4 {
   width: 100%;
-  height: 160px;
+  height: 120px;
   border-bottom: 1px solid black;
   position: relative;
   top: 0;
@@ -112,12 +112,11 @@
 }
 
 .qr-code {
-  width: 140px;
-  height: 140px;
+  width: 100px;
+  height: 100px;
   right: 0px;
   position: absolute;
   margin-top: 10px;
-  height: auto; /* Maintain aspect ratio */
 }
 
 
@@ -149,4 +148,21 @@
   right: 0;
   bottom: 0;
   box-sizing: border-box;
+}
+
+.backfig {
+  width: 350px;
+  height: 350px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #F1F1F1;
+  z-index: 100;
+}
+
+.bigmap {
+  width: 350px;
+  height: 350px;
+  position: absolute;
 }
