--- a/tickets.css
+++ b/tickets.css
@@ -45,6 +45,27 @@
   z-index: 91;
 }
 
+.ticket-elem2 {
+  width: 100%;
+  height: 150px;
+  border-bottom: 1px solid black;
+  background-color: #D9D9D9;
+  position: relative;
+  top: 0;
+  font-family: "Inter";
+  font-weight: 700;
+  padding-left: 20px;
+  line-height: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* 가로 중앙 정렬 */
+  align-items: center;
+  vertical-align: center;
+  letter-spacing: 2px;
+  box-sizing: border-box;
+  z-index: 91;
+}
+
 .ticket-left {
   width: 350px;
   position: absolute;
@@ -59,7 +80,7 @@
   text-align: left;
   font-size: 24px;
   left: 20px;
-  bottom: 10px;
+  top: 100px;
   position: absolute;
 }
 
