--- a/check.css
+++ b/check.css
@@ -74,3 +74,15 @@
   font-size: 1.2em; /* Change the font size to your desired value */
   text-align: center; /* Center align the text */
 }
+
+.tickettable {
+  width: 100%;
+  height: 0px;
+  overflow: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  box-sizing: border-box;
+}
