--- a/main.css
+++ b/main.css
@@ -195,7 +195,20 @@ body {
   box-sizing: border-box;
   z-index: 91;
 }
-
+.progress-home {
+  width:40px;
+  top:4px;
+  left:50%;
+  position: relative;
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 32px;
+  vertical-align: center;
+  letter-spacing: 2px;
+ 
+  border: 3px solid;
+  border-radius: 15px;
+}
 .common-text {
   width: 100%;
   height: 50px;
