fix : Message box ratio modification

--- a/payment.css
+++ b/payment.css
@@ -122,10 +122,11 @@
   background-color: #313030;
   border: 2px solid #333;
   border-radius: 10px;
-  padding: 32px;
+  padding: 25px;
   font-size: 24px;
   text-align: center;
   z-index: 9999;
+  line-height : 30px;
 }
 
 .message-content {
