--- a/main.css
+++ b/main.css
@@ -33,17 +33,18 @@ body {
   background-color: black;
   border: 3px solid white;
   color: white;
-  padding: 10px;
+  padding: 20px;
   font-family: "Inter";
   border-radius: 15px;
   font-weight: 800;
   font-size: 24px;
   line-height: 30px;
-  text-align: left;
+  text-align: center;
   letter-spacing: 2px;
   vertical-align: center;
   box-sizing: border-box;
-  opacity: 0.8;
+  opacity: 0.85;
+  z-index: 2;
 }
 
 .tuto-x {
@@ -121,6 +122,7 @@ body {
   justify-content: center; /* 가로 중앙 정렬 */
   align-items: center;
   gap: 10px;
+  z-index: 1;
 }
 
 .big-button-2 {
@@ -136,16 +138,18 @@ body {
   justify-content: center; /* 가로 중앙 정렬 */
   align-items: center;
   gap: 10px;
+  z-index: 1;
 }
 
 .big-button-2::after {
   content: "1"; /* Text content of the badge */
+  z-index: 1;
   position: absolute; /* Position the badge absolutely within .big-button */
   top: -20px; /* Adjust the distance from the top */
   right: -20px; /* Adjust the distance from the right */
   width: 50px; /* Width of the badge */
   height: 50px; /* Height of the badge */
-  background-color: rgb(237, 59, 19); /* Background color of the badge */
+  background-color: rgb(228, 27, 9); /* Background color of the badge */
   color: white; /* Text color of the badge */
   border-radius: 50%; /* Make the badge circular */
   display: flex; /* Allow flexbox properties */
