--- a/tickets.css
+++ b/tickets.css
@@ -26,7 +26,7 @@
 
 .ticket-elem {
   width: 100%;
-  height: 100px;
+  height: 140px;
   border-bottom: 1px solid black;
   background-color: #D9D9D9;
   position: relative;
@@ -137,4 +137,40 @@
   letter-spacing: 2px;
   box-sizing: border-box;
   z-index: 91;
+}
+
+#popup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .7);
+  z-index: 92;
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+}
+
+#popup.hide {
+  display: none;
+}
+
+.content {
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 350px;
+  position: relative;
+  padding: 10px;
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 30px;
+  text-align: center;
+  vertical-align: center;
+  box-sizing: border-box;
+  z-index: 92;
 }
