--- a/main.css
+++ b/main.css
@@ -141,17 +141,33 @@ body {
   z-index: 1;
 }
 
-.big-button-2::after {
+.big-button-2 {
+  width: 250px;
+  height: 250px;
+  background-color: #D9D9D9;
+  position: relative;
+  border-radius: 25px;
+  border: 5px solid black;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* 가로 중앙 정렬 */
+  align-items: center;
+  gap: 10px;
+  z-index: 1;
+}
+
+.badge {
   content: "0"; /* Text content of the badge */
   display: flex; /* Allow flexbox properties */
   z-index: 1;
   position: absolute; /* Position the badge absolutely within .big-button */
-  top: -20px; /* Adjust the distance from the top */
-  right: -20px; /* Adjust the distance from the right */
+  top: -15; /* Adjust the distance from the top */
+  right: -15; /* Adjust the distance from the right */
   width: 50px; /* Width of the badge */
   height: 50px; /* Height of the badge */
   background-color: rgb(228, 27, 9); /* Background color of the badge */
-  color: white; /* Text color of the badge */
+  color: #ffffff; /* Text color of the badge */
   border-radius: 50%; /* Make the badge circular */
   justify-content: center; /* Center content horizontally */
   align-items: center; /* Center content vertically */
@@ -484,6 +500,45 @@ body {
 .underbar-right-temp2 {
   background-color: #545454;
   border-left: 1px solid black;
+}
+
+
+#popup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .7);
+  z-index: 92;
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+}
+
+#popup.hide {
+  display: none;
+}
+
+.content {
+  padding: 20px;
+  background: #2b2b2b;
+  opacity : 0.95;
+  color : #ffffff;
+  border-radius: 5px;
+  width: 350px;
+  position: relative;
+  padding: 10px;
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 30px;
+  text-align: center;
+  vertical-align: center;
+  box-sizing: border-box;
+  z-index: 92;
 }
 
 
