--- a/main.css
+++ b/main.css
@@ -217,7 +217,7 @@ body {
 }
 .progress-home {
   width:40px;
-  top:4px;
+  top:5px;
   left:50%;
   position: relative;
   font-family: "Inter";
@@ -225,6 +225,7 @@ body {
   font-size: 32px;
   vertical-align: center;
   letter-spacing: 2px;
+  transform: translate(-50%, 0);
  
   border: 3px solid;
   border-radius: 15px;
@@ -301,6 +302,14 @@ body {
 .progress-dummy {
   width: 100%;
   height: 0px;
+  background-color: #F1F1F1;
+  position: relative;
+  z-index: 81;
+}
+
+.progress-homebar {
+  width: 100%;
+  height: 50px;
   background-color: #F1F1F1;
   position: relative;
   z-index: 81;
