--- a/main.css
+++ b/main.css
@@ -179,7 +179,27 @@ body {
   width: 100%;
   height: 50px;
   border-bottom: 3px solid black;
-  background-color: #F1F1F1;
+  background-color: black;
+  color: white;
+  position: relative;
+  top: 0;
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 28px;
+  padding-left: 20px;
+  line-height: 50px;
+  text-align: left;
+  vertical-align: center;
+  letter-spacing: 2px;
+  box-sizing: border-box;
+  z-index: 91;
+}
+
+.common-header-1 {
+  width: 100%;
+  height: 50px;
+  border-bottom: 3px solid black;
+  background-color: f1f1f1;
   color: black;
   position: relative;
   top: 0;
@@ -452,6 +472,12 @@ body {
   z-index: 11;
 }
 
+.underbar-middle {
+  width : 100%;
+  background-color: #545454;
+  border-left: 1px solid black;
+  z-index: 11;
+}
 
 
 .underbar-container {
