--- a/ticket4.css
+++ b/ticket4.css
@@ -166,3 +166,22 @@
   height: 350px;
   position: absolute;
 }
+
+.ticket-request {
+  width: 100%;
+  height: 60px;
+  position: absolute;
+  background-color: #D9D9D9;
+  opacity : 0.95;
+  bottom: 60px;
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 60px;
+  text-align: center;
+  vertical-align: center;
+  letter-spacing: 3px;
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+  z-index: 10;
+}
