--- a/main.css
+++ b/main.css
@@ -277,7 +277,7 @@ body {
   text-align: center;
   vertical-align: center;
   letter-spacing: 2px;
-  color: #F1F1F1;
+  color: #77DD77;
   z-index: 91;
 }
 
